# Omni-Snake-NEAT

./: CMakeLists.txt  README.md
data/: best.json  long.json  nn.json  okay.json  recent.json  sprinter.json
src/: Controller.cpp  Controller.h  Renderer.cpp  Renderer.h  events.h  main.cpp  rng.h
src/NEAT/: Genome.h  Mutation.cpp  Mutation.h  NeuralNetwork.cpp  NeuralNetwork.h  Population.cpp  Population.h  neat_config.h
src/OmniSnake/: Controller.h  Renderer.cpp  Renderer.h  configuration.h  events.h  main.cpp  snake.cpp  snake.h  utility.h
